# napari-particles

./: LICENSE  README.md  mkdocs.yml  setup.cfg  setup.py  tox.ini
docs/: index.md
examples/: smlm_file.py  smlm_utils.py  test_gaia_data.py  test_orient.py  test_particles.py  test_smlm.py  test_stars.py
src/napari_particles/: __init__.py  billboards.py  billboards_filter.py  filters.py  particles.py  utils.py
src/napari_particles/_tests/: test_reader.py
src/napari_particles/octree/lib/: Octree.h  OctreePoint.h  myoctree.cpp
