[metadata]
name = napari-particles
version = 0.0.1
author = Martin Weigert
author_email = marweigert@gmail.com
url = https://github.com/maweigert/napari-particles
license = BSD-3-Clause
description = A particle layer for napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/maweigert/napari-particles/issues
    Documentation = https://github.com/maweigert/napari-particles#README.md
    Source Code = https://github.com/maweigert/napari-particles
    User Support = https://github.com/maweigert/napari-particles/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    scipy
    numpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-particles = napari_particles
